--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -1,6 +1,9 @@
+include /blocks/index/index
+
 extends /blocks/layout-default/layout-default
 
 block head
-	- var pageTitle = 'CSSSR Project Template';
+	- var pageTitle = 'Tools-header';
 
 block content
+	+index()
