--- a/app/blocks/banner/banner.styl
+++ b/app/blocks/banner/banner.styl
@@ -1,5 +1,5 @@
 .banner
 	display block
-	width: 253px
-	height: 70px
-	background-color: #e2e2e2
+	width 253px
+	height 70px
+	background-color #e2e2e2
