--- a/app/blocks/contacts/contacts.styl
+++ b/app/blocks/contacts/contacts.styl
@@ -1,17 +1,23 @@
 .contacts
 	display: flex
-	width: 33.55%
+	width: 22.2%
 	flex-direction: column
-	justify-content: space-between
-
+	padding-left: 24px
+	border-bottom 1px solid #d7d7d7
 .time
+	display flex
+	justify-content space-between
 	font-size: 12px
 .time__text
 	font-weight: bold
 .phone
 	display: block
-	font-size: 25px
-	font-weight: bold
-	text-decoration: none
-	color: #000
+	margin-top 20px
+	font-size 24px
+	font-weight bold
+	text-decoration none
+	color #000
+
+
+
 
