--- a/app/blocks/menu/menu.styl
+++ b/app/blocks/menu/menu.styl
@@ -1,8 +1,12 @@
 .menu
 	display flex
+	justify-content space-between
+	width 68.8%
 .menu__link
 	display block
 	padding-y 8px
 	padding-x 10px
 	font-size 12px
 	color black
+	&:first-of-type
+		padding-left: 0
