--- a/app/blocks/row/row.styl
+++ b/app/blocks/row/row.styl
@@ -9,3 +9,9 @@
 	&--middle
 		display flex
 		justify-content space-between
+		padding-top 19px
+	&--bottom
+		display flex
+		justify-content space-between
+	&--menu-tools
+		padding-y 20px
