--- a/app/blocks/cart/cart.jade
+++ b/app/blocks/cart/cart.jade
@@ -3,8 +3,8 @@ mixin cart()
 		+e.UL.list
 			+e.LI.item
 				+e.I.icon._cart
-				+e.A.link(href="#")
-					span 3шт /
+				+e.A.link._cart(href="#")
+					span 3 шт /
 					span 17 250 р.
 			+e.LI.item
 				+e.I.icon._star
