--- a/app/blocks/user/user.styl
+++ b/app/blocks/user/user.styl
@@ -1,10 +1,10 @@
 .user
 	display flex
-
+	width: 15%
 .user__link
 	display block
 	padding-y 8px
-	padding-x 12px
+	padding-x 13px
 	font-size 12px
 	color black
 	&:first-of-type
@@ -14,7 +14,7 @@
 			content: ''
 			width: 2px
 			height: 11px
-			top: 10px
+			top: 9px
 			right: 0
 			background-color: #000
 
