fixed lint comments

--- a/app/blocks/cart/cart.styl
+++ b/app/blocks/cart/cart.styl
@@ -1,22 +1,22 @@
 .cart
 	display flex
 	justify-content space-between
-	width: 43.66%
+	width 43.66%
 .cart__list
 	display flex
-	width 36.76%
 	flex-direction column
 	justify-content space-between
+	width 36.76%
 
 .cart__item
+	position relative
+	padding-left 30px
 	display flex
 	align-items center
-	padding-left 30px
-	position: relative
-	height: 33%
+	height 33%
 .cart__icon
-	position: absolute
-	left: 0
+	position absolute
+	left 0
 	&_cart
 		sprite($cart)
 	&_star
@@ -27,18 +27,18 @@
 
 .cart__link
 	font-size 12px
-	color: #000
-	text-decoration: underline
+	text-decoration underline
+	color #000
 	&_cart
 		font-size 14px
 .gallery
-	display: flex
-	width: 59.52%
-	justify-content: space-between
+	display flex
+	width 59.52%
+	justify-content space-between
 .gallery__item
-	display: flex
-	justify-content: center
-	align-items: center
-	width: 72px
-	height: 72px
-	border: 1px solid #d9d9d9
+	display flex
+	justify-content center
+	align-items center
+	width 72px
+	height 72px
+	border 1px solid #d9d9d9
