--- a/app/blocks/contacts/contacts.styl
+++ b/app/blocks/contacts/contacts.styl
@@ -1,18 +1,18 @@
 .contacts
-	display: flex
-	width: 22.2%
-	flex-direction: column
-	padding-left: 24px
+	padding-left 24px
+	display flex
+	flex-direction column
+	width 22.2%
 	border-bottom 1px solid #d7d7d7
 .time
 	display flex
 	justify-content space-between
-	font-size: 12px
+	font-size 12px
 .time__text
-	font-weight: bold
+	font-weight bold
 .phone
-	display: block
 	margin-top 20px
+	display block
 	font-size 24px
 	font-weight bold
 	text-decoration none
