--- a/app/blocks/logo/logo.jade
+++ b/app/blocks/logo/logo.jade
@@ -1,5 +1,4 @@
 mixin logo()
 	+b.logo&attributes(attributes)
-		+e.A(href="#").link
+		+e.A.link(href="#")
 			+e.img(src="/assets/images/logo.png")
-
