--- a/app/blocks/row/row.styl
+++ b/app/blocks/row/row.styl
@@ -1,15 +1,15 @@
 .row
 	&--top
 		display flex
-		justify-content: space-between
+		justify-content space-between
 	&--menu
 		display flex
 		justify-content space-between
-		border-bottom: 1px solid #d7d7d7
+		border-bottom 1px solid #d7d7d7
 	&--middle
+		padding-top 19px
 		display flex
 		justify-content space-between
-		padding-top 19px
 	&--bottom
 		display flex
 		justify-content space-between
