--- a/app/blocks/store-name/store-name.styl
+++ b/app/blocks/store-name/store-name.styl
@@ -1,8 +1,9 @@
 .store-name
-	width 17.95%
 	padding-y 8px
+	width 17.95%
 	font-size 12px
 	font-weight bold
-	color: #000000
-	text-transform uppercase
 	text-align center
+	text-transform uppercase
+	color #000000
+
