--- a/app/blocks/user/user.styl
+++ b/app/blocks/user/user.styl
@@ -1,20 +1,20 @@
 .user
 	display flex
-	width: 15%
+	width 15%
 .user__link
-	display block
-	padding-y 8px
 	padding-x 13px
+	padding-y 8px
+	display block
 	font-size 12px
 	color black
 	&:first-of-type
 		position relative
 		&:after
 			position absolute
-			content: ''
-			width: 2px
-			height: 11px
-			top: 9px
-			right: 0
-			background-color: #000
+			top 9px
+			right 0
+			width 2px
+			height 11px
+			content ''
+			background-color #000
 
