--- a/app/blocks/city/city.styl
+++ b/app/blocks/city/city.styl
@@ -1,21 +1,22 @@
 .city
-	display flex
-	width: 15.6%
-	justify-content space-between
 	padding-y 5px
+	display flex
+	width 15.6%
+	justify-content space-between
 	font-size 12px
 .city__select
 	position relative
 	text-decoration none
+	color #000000
 	border-bottom 1px dotteds #000000
-	color: #000000
 	&:before
 		position absolute
-		content ''
-		width 0
-		height: 0
-		left -11px
 		top 2px
-		border-style: solid
-		border-width: 4.5px 0 4.5px 8px
-		border-color: transparent transparent transparent #000000
+		left -11px
+		width 0
+		height 0
+		content ''
+		border-width 4.5px 0 4.5px 8px
+		border-style solid
+		border-color transparent transparent transparent #000000
+
