--- a/app/blocks/menu/menu.styl
+++ b/app/blocks/menu/menu.styl
@@ -3,10 +3,10 @@
 	justify-content space-between
 	width 68.8%
 .menu__link
-	display block
-	padding-y 8px
 	padding-x 10px
+	padding-y 8px
+	display block
 	font-size 12px
 	color black
 	&:first-of-type
-		padding-left: 0
+		padding-left 0
